--- a/muckrock/assets/scss/layout/nav/_sidebar.scss
+++ b/muckrock/assets/scss/layout/nav/_sidebar.scss
@@ -236,3 +236,24 @@ The sidebar should use a dark UI.
         }
     }
 }
+
+#modal-overlay {
+    position: fixed;
+    top: -9999px;
+    left: 0;
+    right: $sidebar-width;
+    height: 110%;
+    width: 100%;
+    z-index: 200;
+    background-color: $color-black;
+    opacity: 0;
+    transition: top 0s .25s, opacity .25s linear;
+    &.visible {
+        top: 0;
+        opacity: .9;
+        transition: top 0s 0s, opacity .25s linear;
+    }
+    &:hover {
+        cursor: pointer;
+    }
+}
